--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <div id="catalog">
             <h2>Our Collections</h2>
             <div id="img">
-                <img src="book.jpg" alt="">
-                <img src="book1.webp" alt="">
-                <img src="book3.jpg" alt="">
-                <img src="book4.jpg" alt="">
-                <img src="book.jpg" alt="">
-                <img src="book.jpg" alt="">
-                <img src="book.jpg" alt="">
-                <img src="book1.webp" alt="">
-                <img src="book3.jpg" alt="">
-                <img src="book4.jpg" alt="">
-                <img src="book.jpg" alt="">
-                <img src="book.jpg" alt="">
-            
+                <a href=""><img src="book.jpg" alt=""></a>
+                <a href=""><img src="book1.webp" alt=""></a>
+                <a href=""><img src="book3.jpg" alt=""></a>
+                <a href=""><img src="book4.jpg" alt=""></a>
+                <a href=""><img src="book.jpg" alt=""></a>
+                <a href=""><img src="book1.webp" alt=""></a>
+                <a href=""><img src="book3.jpg" alt=""></a>
+                <a href=""><img src="book4.jpg" alt=""></a>
+                <a href=""><img src="book.jpg" alt=""></a>
+                <a href=""><img src="book1.webp" alt=""></a>
+                <a href=""><img src="book3.jpg" alt=""></a>
+                <a href=""><img src="book4.jpg" alt=""></a>
+                          
             </div>
         </div>
     </div>
