--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
         .container{
             height: 100%;
             color: white;     
-            background-image:
-            url('aboutimg.jpg');
-              background-attachment: fixed;
+            background-image: url('aboutimg.jpg');
+            background-size: cover;
+            background-attachment: fixed;
         }
         .about{
             width: 60%;
