--- a/login.html
+++ b/login.html
@@ -59,6 +59,15 @@
                 padding: 0.3rem;
             }
         }
+        input{
+            border: none;
+            border-radius: 10px;
+            padding: 0.2rem;
+        }
+        input:focus{
+            outline: 1.5px solid rgb(16, 1, 7);
+            outline-offset: 0;
+        }
         
     </style>
 </head>
