--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookStore</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
@@ -25,19 +27,129 @@
 
         <div id="home">
             <div class="knowledge">
-                We provide knowledge ...
-                <br><br>
-                "Discover the World of Words at Our Bookstore."
+                <p>We provide knowledge ...</p>
+                <p>"Discover the World of Words at Our Bookstore."</p>
+                <div class="search">
+                    <input type="text" placeholder="Search your Book" id="search">
+                    <label for="search"><i class="fa fa-search"></i></label>
+                    
+                </div>
             </div>
             <div class="bookstoreimg">
-                <a href="about.html" target="_blank"><img src="bookstore.jpg" alt=""></a>
+                     <a href="about.html" target="_blank"><img src="bookstore.jpg" alt=""></a>
+                <div class="textimg">Know More</div>
             </div>
         </div>
         
+        <div class="review">
+            <h2>Our Customers</h2>
+            <div class="reviewbox"> 
+                <div class="reviewcontainer">
+                    <div class="box">
+                        <div class="star">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tenetur hic, quos nihil ducimus fuga.</p>
+                        <div class="starimg">
+                            <img src="book.jpg" alt="">
+                            <div class="name">
+                                <h3>Name Singhla</h3>
+                                <p>Lorem se ipsum.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="star">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tenetur hic, quos nihil ducimus fuga.</p>
+                        <div class="starimg">
+                            <img src="" alt="">
+                            <div class="name">
+                                <h3>Name Singhla</h3>
+                                <p>Lorem se ipsum.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="star">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tenetur hic, quos nihil ducimus fuga.</p>
+                        <div class="starimg">
+                            <img src="" alt="">
+                            <div class="name">
+                                <h3>Name Singhla</h3>
+                                <p>Lorem se ipsum.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="box">
+                        <div class="star">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tenetur hic, quos nihil ducimus fuga.</p>
+                        <div class="starimg">
+                            <img src="" alt="">
+                            <div class="name">
+                                <h3>Name Singhla</h3>
+                                <p>Lorem se ipsum.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="star">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tenetur hic, quos nihil ducimus fuga.</p>
+                        <div class="starimg">
+                            <img src="" alt="">
+                            <div class="name">
+                                <h3>Name Singhla</h3>
+                                <p>Lorem se ipsum.</p>
+                            </div>
+                        </div>
+                    </div> -->
+                </div>
+
+                <div style="text-align:center">
+                <span class="dot"></span> 
+                <span class="dot"></span> 
+                <span class="dot"></span> 
+                </div>
+        </div>
 
         <div id="catalog">
             <h2>Our Collections</h2>
             <div id="img">
+                <a href=""><img src="book.jpg" alt=""></a>
+                <a href=""><img src="book1.webp" alt=""></a>
+                <a href=""><img src="book3.jpg" alt=""></a>
+                <a href=""><img src="book4.jpg" alt=""></a>
+                <a href=""><img src="book.jpg" alt=""></a>
+                <a href=""><img src="book1.webp" alt=""></a>
+                <a href=""><img src="book3.jpg" alt=""></a>
+                <a href=""><img src="book4.jpg" alt=""></a>
                 <a href=""><img src="book.jpg" alt=""></a>
                 <a href=""><img src="book1.webp" alt=""></a>
                 <a href=""><img src="book3.jpg" alt=""></a>
