--- a/index.html
+++ b/index.html
@@ -45,17 +45,35 @@
             <h2>Our Customers</h2>
             <div class="reviewbox"> 
                 <div class="reviewcontainer">
+                    
                     <div class="box">
                         <div class="star">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tenetur hic, quos nihil ducimus fuga.</p>
+                        <div class="starimg">
+                            <img src="reviewpic.jpg" alt="">
+                            <div class="name">
+                                <h3>Name Singhla</h3>
+                                <p>Lorem se ipsum.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="star">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
                             <span class="fa fa-star"></span>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tenetur hic, quos nihil ducimus fuga.</p>
                         <div class="starimg">
-                            <img src="book.jpg" alt="">
+                            <img src="reviewpic.jpg" alt="">
                             <div class="name">
                                 <h3>Name Singhla</h3>
                                 <p>Lorem se ipsum.</p>
@@ -72,70 +90,19 @@
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tenetur hic, quos nihil ducimus fuga.</p>
                         <div class="starimg">
-                            <img src="" alt="">
+                            <img src="reviewpic.jpg" alt="">
                             <div class="name">
                                 <h3>Name Singhla</h3>
                                 <p>Lorem se ipsum.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="box">
-                        <div class="star">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star"></span>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tenetur hic, quos nihil ducimus fuga.</p>
-                        <div class="starimg">
-                            <img src="" alt="">
-                            <div class="name">
-                                <h3>Name Singhla</h3>
-                                <p>Lorem se ipsum.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- <div class="box">
-                        <div class="star">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star"></span>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tenetur hic, quos nihil ducimus fuga.</p>
-                        <div class="starimg">
-                            <img src="" alt="">
-                            <div class="name">
-                                <h3>Name Singhla</h3>
-                                <p>Lorem se ipsum.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <div class="star">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star"></span>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tenetur hic, quos nihil ducimus fuga.</p>
-                        <div class="starimg">
-                            <img src="" alt="">
-                            <div class="name">
-                                <h3>Name Singhla</h3>
-                                <p>Lorem se ipsum.</p>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
 
                 <div style="text-align:center">
-                <span class="dot"></span> 
-                <span class="dot"></span> 
-                <span class="dot"></span> 
+                    <span class="dot"></span> 
+                    <span class="dot"></span> 
+                    <span class="dot"></span> 
                 </div>
         </div>
 
@@ -166,5 +133,8 @@
             </div>
         </div>
     </div>
+
+
+    <script src="index.js"></script>
 </body>
 </html>
