--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="logo.jpg" alt="logo">
                 <ul class="navlist">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#catalog">Catalog</a></li>
+                    <li><a href="catalog.html" target="_blank">Catalog</a></li>
                     <li><a href="login.html" target="_blank">LogIn</a></li>
                     <li><a href="signup.html" target="_blank">SignUp</a></li>
                 </ul>
@@ -105,34 +105,45 @@
                     <span class="dot"></span> 
                 </div>
         </div>
-
-        <div id="catalog">
-            <h2>Our Collections</h2>
-            <div id="img">
-                <a href=""><img src="book.jpg" alt=""></a>
-                <a href=""><img src="book1.webp" alt=""></a>
-                <a href=""><img src="book3.jpg" alt=""></a>
-                <a href=""><img src="book4.jpg" alt=""></a>
-                <a href=""><img src="book.jpg" alt=""></a>
-                <a href=""><img src="book1.webp" alt=""></a>
-                <a href=""><img src="book3.jpg" alt=""></a>
-                <a href=""><img src="book4.jpg" alt=""></a>
-                <a href=""><img src="book.jpg" alt=""></a>
-                <a href=""><img src="book1.webp" alt=""></a>
-                <a href=""><img src="book3.jpg" alt=""></a>
-                <a href=""><img src="book4.jpg" alt=""></a>
-                <a href=""><img src="book.jpg" alt=""></a>
-                <a href=""><img src="book1.webp" alt=""></a>
-                <a href=""><img src="book3.jpg" alt=""></a>
-                <a href=""><img src="book4.jpg" alt=""></a>
-                <a href=""><img src="book.jpg" alt=""></a>
-                <a href=""><img src="book1.webp" alt=""></a>
-                <a href=""><img src="book3.jpg" alt=""></a>
-                <a href=""><img src="book4.jpg" alt=""></a>
-                          
+        </div>
+        <div id="bestsell">
+            <h2>Best Seller Books</h2>
+            <div class="imgsell">
+                <div class="imgs">
+                    <img src="book.jpg" alt="">
+                    <div class="imgwrite">15% off</div>
+                    <div class="above">
+                        <h4>Bon Voage</h4>
+                        <p>Rs. 450</p>
+                    </div>
+                </div>
+                <div class="imgs">
+                    <img src="book1.webp" alt="">
+                    <div class="imgwrite">15% off</div>
+                    <div class="above">
+                        <h4>Bon Voage</h4>
+                        <p>Rs. 450</p>
+                    </div>
+                </div>
+                <div class="imgs">
+                    <img src="book3.jpg" alt="">
+                    <div class="imgwrite">15% off</div>
+                    <div class="above">
+                        <h4>Bon Voage</h4>
+                        <p>Rs. 450</p>
+                    </div>
+                </div>
+                <div class="imgs">
+                    <img src="book4.jpg" alt="">
+                    <div class="imgwrite">15% off</div>
+                    <div class="above">
+                        <h4>Bon Voage</h4>
+                        <p>Rs. 450</p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+        
 
 
     <script src="index.js"></script>
