--- a/catalog.html
+++ b/catalog.html
@@ -1,100 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        #catalog{
-    display: flex;
-    flex-direction: column;
-    gap: 1.6rem;
-}
-#catalog h2{
-    text-align: center;
-    font-size: 2.5rem;
-    text-shadow: 1px 1px 2px aliceblue;
-    color: black;
-    padding-top: 1.5rem;
-}
-#img{
-    width: 90%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 2rem 0rem;
-    justify-content: center;
-    align-items: center;
-}
-#img img{
-    width: 200px;
-    height: 285px;
-    margin: 0.5rem;
-    box-shadow: 0px 0px 4px black;
-    opacity: 0.8;
-    border: 1px solid black;
-}
-#img img:hover{
-    opacity: 1;
-}
-@media (max-width: 1200px) {
-    #img img{
-        width: 170px;
-        height: 250px;
-    }   
-}
-@media (max-width: 650px) {
-    #img img{
-        width: 100px;
-        height: 160px;
-    }   
-}
-@media (max-width: 450px) {
-    #img img{
-        width: 70px;
-        height: 120px;
-    }  
-    #catalog h2{
-        font-size: 1.7rem;
-    } 
-}
-@media (max-width: 370px) {
-    #img{
-        width: 95%;
-    }
-    #img img{
-        width: 50px;
-        height: 84px;
-    }   
-}
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+      #catalog {
+        display: flex;
+        flex-direction: column;
+        gap: 1.6rem;
+        background: linear-gradient( 83.2deg,  rgba(150,93,233,1) 10.8%, rgba(99,88,238,1) 94.3% );
+      }
+      #catalog h2 {
+        text-align: center;
+        font-size: 2.5rem;
+        text-shadow: 1px 1px 2px aliceblue;
+        color: black;
+        padding-top: 1.5rem;
+      }
+      #img {
+        width: 90%;
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 2rem 0rem;
+        justify-content: center;
+        align-items: center;
+      }
+      #img img {
+        width: 200px;
+        height: 285px;
+        margin: 0.5rem;
+        box-shadow: 0px 0px 4px black;
+        opacity: 0.8;
+        border: 1px solid black;
+      }
+      #img img:hover {
+        opacity: 1;
+      }
+      @media (max-width: 1200px) {
+        #img img {
+          width: 170px;
+          height: 250px;
+        }
+      }
+      @media (max-width: 650px) {
+        #img img {
+          width: 100px;
+          height: 160px;
+        }
+      }
+      @media (max-width: 450px) {
+        #img img {
+          width: 70px;
+          height: 120px;
+        }
+        #catalog h2 {
+          font-size: 1.7rem;
+        }
+      }
+      @media (max-width: 370px) {
+        #img {
+          width: 95%;
+        }
+        #img img {
+          width: 50px;
+          height: 84px;
+        }
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div id="catalog">
-        <h2>Our Collections</h2>
-        <div id="img">
-            <a href=""><img src="book.jpg" alt=""></a>
-            <a href=""><img src="book1.webp" alt=""></a>
-            <a href=""><img src="book3.jpg" alt=""></a>
-            <a href=""><img src="book4.jpg" alt=""></a>
-            <a href=""><img src="book.jpg" alt=""></a>
-            <a href=""><img src="book1.webp" alt=""></a>
-            <a href=""><img src="book3.jpg" alt=""></a>
-            <a href=""><img src="book4.jpg" alt=""></a>
-            <a href=""><img src="book.jpg" alt=""></a>
-            <a href=""><img src="book1.webp" alt=""></a>
-            <a href=""><img src="book3.jpg" alt=""></a>
-            <a href=""><img src="book4.jpg" alt=""></a>
-            <a href=""><img src="book.jpg" alt=""></a>
-            <a href=""><img src="book1.webp" alt=""></a>
-            <a href=""><img src="book3.jpg" alt=""></a>
-            <a href=""><img src="book4.jpg" alt=""></a>
-            <a href=""><img src="book.jpg" alt=""></a>
-            <a href=""><img src="book1.webp" alt=""></a>
-            <a href=""><img src="book3.jpg" alt=""></a>
-            <a href=""><img src="book4.jpg" alt=""></a>
-                      
-        </div>
+      <h2>Our Collections</h2>
+      <div id="img">
+        <a href=""><img src="book.jpg" alt="" /></a>
+        <a href=""><img src="book1.webp" alt="" /></a>
+        <a href=""><img src="book3.jpg" alt="" /></a>
+        <a href=""><img src="book4.jpg" alt="" /></a>
+        <a href=""><img src="book.jpg" alt="" /></a>
+        <a href=""><img src="book1.webp" alt="" /></a>
+        <a href=""><img src="book3.jpg" alt="" /></a>
+        <a href=""><img src="book4.jpg" alt="" /></a>
+        <a href=""><img src="book.jpg" alt="" /></a>
+        <a href=""><img src="book1.webp" alt="" /></a>
+        <a href=""><img src="book3.jpg" alt="" /></a>
+        <a href=""><img src="book4.jpg" alt="" /></a>
+        <a href=""><img src="book.jpg" alt="" /></a>
+        <a href=""><img src="book1.webp" alt="" /></a>
+        <a href=""><img src="book3.jpg" alt="" /></a>
+        <a href=""><img src="book4.jpg" alt="" /></a>
+        <a href=""><img src="book.jpg" alt="" /></a>
+        <a href=""><img src="book1.webp" alt="" /></a>
+        <a href=""><img src="book3.jpg" alt="" /></a>
+        <a href=""><img src="book4.jpg" alt="" /></a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
